# libfsm

./: CMakeLists.txt
.github/workflows/: build_and_test.yaml
examples/light_switch/: async_fsm.cpp  async_fsm.hpp  fsm_defs.hpp  light_switch.cpp  ls_async_freertos.cpp  ls_async_pthread.cpp  ls_sync_posix.cpp
include/fsm/: fsm.hpp
include/fsm/_impl/: common.hpp
include/fsm/specialization/async/: freertos.hpp  pthread.hpp
include/fsm/specialization/sync/: posix.hpp
include/fsm/utils/: Identifiable.hpp  StaticRingBuffer.hpp
tests/: CMakeLists.txt
